# static-engine

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md  cmakelists.txt
.github/workflows/: ci-gtest.yaml
builld/: CPackConfig.cmake  CPackSourceConfig.cmake
engine/include/: application.hpp  defines.hpp  entry.hpp  game_types.hpp  logger.hpp
engine/include/core/: application.hpp  application_config.hpp  comp_string.hpp  config_loader.hpp  logger.h  logger.hpp
engine/include/platform/: platform.hpp  wayland.hpp  xdg-shell-client-protocol.h
engine/include/utils/: comp_string.hpp  config_loader.hpp
engine/src/: application.cpp  entry.cpp  main.cpp
engine/src/core/: application.cpp
engine/src/platform/: wayland.cpp
engine/test/: stuff.cpp
engine/test/core/: config_loader_test.cpp  logger_test.cpp
